cargo-features = ["different-binary-name"]

[package]
name = "svboot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svboot"
filename = "svboot.elf"

[dependencies]
fdt = "0.1.5"
talc = "4.4.3"
svcommon = { path = "../svcommon" }
svpci = { path = "../svpci" }
lock_api = "0.4.13"
spin = "0.10.0"
ctor_bare = "0.2.1"
